--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-/en/ @ImRodry @Bas950
-/* @ImRodry @Bas950
-/.github/ @ImRodry @Bas950
-crowdin.yml @ImRodry
+/en/ @Bas950
+/* @Bas950
+/.github/ @Bas950
+crowdin.yml @Bas950
